# dot-spend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  categorization.py  config.py  currency.py  data.py  datastore.py  deduplication.py  expenses_20260130_194911.csv  expenses_20260130_194916.json  expenses_20260130_194922.xlsx  expenses_20260130_195008.xlsx  export.csv  exporters.py  history.py  insights.py  main.py  migrations.py  pyproject.toml  pytest.ini  recurring.py  requirements-dev.txt  requirements.txt  sample_statement.csv  setup.py  spend.spec  sync_config.json  tui.py  tui.tcss  utils.py  ux.py
.github/workflows/: release.yml  test.yml
docs/: advanced.md  configuration.md  user-guide.md
importers/: base.py  csv_importer.py  excel_importer.py  ofx_importer.py
sync/: base.py  manager.py
sync/providers/: dropbox.py  git.py  google_drive.py
tests/: conftest.py  test_budgets.py  test_expenses.py  test_import.py
