[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dot-spend"
version = "2.0.0"
description = "A powerful CLI expense tracker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yehia Gewily"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "plotext>=5.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
]
sync = [
    "gitpython>=3.1.0",
    "dropbox>=11.36.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
spend = "main:app"

[project.urls]
Homepage = "https://github.com/YehiaGewily/dot-spend"
Documentation = "https://github.com/YehiaGewily/dot-spend#readme"
Repository = "https://github.com/YehiaGewily/dot-spend"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
